applications/wger/20-wger.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wger
  namespace: wger
  labels:
    app: wger
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wger
  template:
    metadata:
      labels:
        app: wger
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: wger
          image: wger/server:latest
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: media
              mountPath: /home/wger/media
          startupProbe:
            httpGet:
              path: /en/user/login
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /en/user/login
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /en/user/login
              port: http
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: wger-media-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: wger
  namespace: wger
  labels:
    app: wger
spec:
  type: ClusterIP
  selector:
    app: wger
  ports:
    - name: http
      port: 8000
      targetPort: http
