applications/wger/40-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wger-ingress
  namespace: wger
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: wger.dohrm.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wger
                port:
                  number: 8000
